tests/baselines/reference/declarationEmitInvalidReferenceAllowJs.errors.txt
tests/cases/compiler/declarationEmitInvalidReferenceAllowJs.ts(1,22): error TS6231: Could not resolve the path 'tests/cases/compiler/invalid' with the extensions: '.ts', '.tsx', '.d.ts', '.ets', '.d.ets', '.js', '.jsx'.


==== tests/cases/compiler/declarationEmitInvalidReferenceAllowJs.ts (1 errors) ====
    /// <reference path="invalid" />
                         ~~~~~~~
!!! error TS6231: Could not resolve the path 'tests/cases/compiler/invalid' with the extensions: '.ts', '.tsx', '.d.ts', '.ets', '.d.ets', '.js', '.jsx'.
    var x = 0; 
    